--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "learn-travis",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nelsonic/learn-travis.git"
-  },
-  "description": "Simple nodejs, travis and grunt demo",
-  "author": "https://twitter.com/nelsonic",
-  "version": "1.0.0",
+  "name": "learn-travis-Romain",
+  "description": "Simple Travis-CI check for JSHint (Code Linting)",
+  "author": "Romain ROUX",
+  "version": "0.0.1",
   "devDependencies": {
-    "jshint": "^2.8.0"
+    "jshint": "^2.9.7"
   },
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint hello.js"
+    "test": "jshint hello.js"
+  },
+  "dependencies": {
+    "save-dev": "^2.0.0"
   }
 }
